--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 								<button class="dropdown-item" id="open-file-btn">
 									<input id="file-input" accept=".txt" type="file" style="display: none;" />Открыть
 								</button>
-								<button class="btn dropdown-item" id="save-file-btn" href="#" style="white-space:normal;"
-									data-toggle="modal" data-target="#save-modal">Сохранить</button>
+								<a class="btn dropdown-item" id="save-file-btn" href="#" style="white-space:normal;" data-toggle="modal"
+									data-target="#save-modal">Сохранить</a>
 							</div>
 						</div>
 					</div>
@@ -199,12 +199,15 @@
 					<div id="options-container">
 						<div class="form-group">
 							<div class="form-group">
+								<label for="file-name">Введите название файла</label>
+								<input class="parameter form-control" id="file-name">
+							</div>
+							<div class="form-group">
 								<label for="signal-choice">Выберите сигнал</label>
 								<select class="form-control signal-choice" id="save-signal"></select>
 							</div>
+							<label for="channels-checkbox">Выберите каналы для сохранения</label>
 							<div class="form-group" id="channels-checkbox">
-								<div class="form-check">
-								</div>
 							</div>
 						</div>
 					</div>
@@ -213,7 +216,7 @@
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">
 						Закрыть
 					</button>
-					<button type="button" class="btn btn-primary" data-dismiss="modal" id="create-model-btn">Применить</button>
+					<button type="button" class="btn btn-primary" data-dismiss="modal" id="save-file">Применить</button>
 				</div>
 			</div>
 		</div>
