added spectral analysis

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 							</div>
 							<div class="form-group">
 								<label for="channel-choice">Выберите канал</label>
-								<select class="form-control channel-choice">
+								<select class="form-control channel-choice" id="spectral-channel">
 								</select>
 							</div>
 							<div class="form-group">
