fixed some shit

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 	</div>
 
 	<article class="d-flex justify-content-around containet-fluid">
-		<canvas id="canvas1"></canvas>
+		<!-- <canvas id="canvas1"></canvas> -->
 	</article>
 	<script src="js/main.js" type="module"></script>
 </body>
