--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 						<div id="options-container">
 							<div class="form-group">
 								<label for="signal-choice">Выберите сигнал</label>
-								<select class="form-control signal-choice">
+								<select class="form-control signal-choice" id="spectro-signal">
 								</select>
 							</div>
 							<div class="form-group">
@@ -402,7 +402,7 @@
 							</div>
 						</div>
 						<div id="spectrogram">
-							<canvas id="canvas"></canvas>
+							<canvas class="spectro-canvas" id="canvas"></canvas>
 							<div id="spectrogram-slider"></div>
 						</div>
 					</div>
